# bank-fraud-detection

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml  readme.md  requirements-notebooks.txt  requirements.txt
Config/: __init__.py  config.py
docs/: Rapport_Projet_Detection_Fraude_Bancaire.docx  spark-lambda.md  streaming.md
fraud_dashboard/: Dockerfile  __init__.py  app.py  data.py
fraud_dashboard/.streamlit/: config.toml
fraud_scoring/: Dockerfile  __init__.py  features.py  kafka_scorer.py
kafka-cluster/: _repo_root.py  config.py  connecteur_api.py  consumer.py  produceur.py
models/: fraud_classifier.joblib
notebooks/: exploration.ipynb
pipeline/: README.md  __init__.py  config.py  csv_to_kafka.py  kafka_consume_sample.py
scripts/: generate_rapport_docx.py
scripts/streaming/: check_kafka.sh  ingest_csv.sh
simulateur/: Dockerfile  __init__.py  __main__.py  app.py  schemas.py  transaction_simulator.py
spark/: Dockerfile  download-kafka-jars.sh
spark_lambda/: __init__.py  batch_layer.py  settings.py  speed_layer.py  transaction_schema.py
src/bank_fraud_detection/: __init__.py  config.py
src/bank_fraud_detection/streaming/: __init__.py  csv_to_kafka.py  kafka_consume_sample.py  transaction_simulator.py
